# PARP

./: .gitignore  CMakeLists.txt  Makefile.master  README.md  Scratches.hpp  Test_Scratches.cpp  initGui.py  makefile
Deflicker/: Deflicker.cpp  Makefile
Example/: Example.cpp  Makefile  README.md
RemoveScratches/: Makefile  RemoveScratches.cpp  Scratches.cpp  Scratches.hpp
Scratches/: .gitignore  ReadMe  Scratches.cpp  Scratches.hpp  Test_Scratches.cpp
ShotCutDetection/: Info.plist  Makefile  ShotCutDetection.cpp
